// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should contain correct values for theme 1`] = `
{
  "dark": {
    "background": {
      "base": "#0E0E12",
      "shading": "rgba(64, 64, 68, 0.67)",
      "surface": "#212225",
    },
    "contrast": {
      "high": "#AFB0B3",
      "low": "#404044",
      "medium": "#88898C",
    },
    "notification": {
      "error": "#FC4040",
      "errorSoft": "#3A0F0F",
      "info": "#178BFF",
      "infoSoft": "#04294E",
      "success": "#09D087",
      "successSoft": "#003320",
      "warning": "#F7CB47",
      "warningSoft": "#362B0A",
    },
    "primary": "#FBFCFF",
    "state": {
      "active": "rgba(126, 127, 130, 0.20)",
      "disabled": "#7E7F82",
      "focus": "#1A44EA",
      "hover": "rgba(148, 149, 152, .18)",
    },
  },
  "light": {
    "background": {
      "base": "#FFF",
      "shading": "rgba(1, 2, 5, 0.67)",
      "surface": "#EEEFF2",
    },
    "contrast": {
      "high": "#535457",
      "low": "#D8D8DB",
      "medium": "#6B6D70",
    },
    "notification": {
      "error": "#CC1922",
      "errorSoft": "#FFE2E4",
      "info": "#2762EC",
      "infoSoft": "#D3E1FF",
      "success": "#197E10",
      "successSoft": "#E4FFEC",
      "warning": "#F3BE00",
      "warningSoft": "#FFF4D2",
    },
    "primary": "#010205",
    "state": {
      "active": "rgba(148, 149, 152, 0.20)",
      "disabled": "#949598",
      "focus": "#1A44EA",
      "hover": "rgba(148, 149, 152, .18)",
    },
  },
}
`;

exports[`should contain correct values for themeDark 1`] = `
{
  "background": {
    "base": "#0E0E12",
    "shading": "rgba(64, 64, 68, 0.67)",
    "surface": "#212225",
  },
  "contrast": {
    "high": "#AFB0B3",
    "low": "#404044",
    "medium": "#88898C",
  },
  "notification": {
    "error": "#FC4040",
    "errorSoft": "#3A0F0F",
    "info": "#178BFF",
    "infoSoft": "#04294E",
    "success": "#09D087",
    "successSoft": "#003320",
    "warning": "#F7CB47",
    "warningSoft": "#362B0A",
  },
  "primary": "#FBFCFF",
  "state": {
    "active": "rgba(126, 127, 130, 0.20)",
    "disabled": "#7E7F82",
    "focus": "#1A44EA",
    "hover": "rgba(148, 149, 152, .18)",
  },
}
`;

exports[`should contain correct values for themeDarkBackgroundBase 1`] = `"#0E0E12"`;

exports[`should contain correct values for themeDarkBackgroundShading 1`] = `"rgba(64, 64, 68, 0.67)"`;

exports[`should contain correct values for themeDarkBackgroundSurface 1`] = `"#212225"`;

exports[`should contain correct values for themeDarkContrastHigh 1`] = `"#AFB0B3"`;

exports[`should contain correct values for themeDarkContrastLow 1`] = `"#404044"`;

exports[`should contain correct values for themeDarkContrastMedium 1`] = `"#88898C"`;

exports[`should contain correct values for themeDarkNotificationError 1`] = `"#FC4040"`;

exports[`should contain correct values for themeDarkNotificationErrorSoft 1`] = `"#3A0F0F"`;

exports[`should contain correct values for themeDarkNotificationInfo 1`] = `"#178BFF"`;

exports[`should contain correct values for themeDarkNotificationInfoSoft 1`] = `"#04294E"`;

exports[`should contain correct values for themeDarkNotificationSuccess 1`] = `"#09D087"`;

exports[`should contain correct values for themeDarkNotificationSuccessSoft 1`] = `"#003320"`;

exports[`should contain correct values for themeDarkNotificationWarning 1`] = `"#F7CB47"`;

exports[`should contain correct values for themeDarkNotificationWarningSoft 1`] = `"#362B0A"`;

exports[`should contain correct values for themeDarkPrimary 1`] = `"#FBFCFF"`;

exports[`should contain correct values for themeDarkStateActive 1`] = `"rgba(126, 127, 130, 0.20)"`;

exports[`should contain correct values for themeDarkStateDisabled 1`] = `"#7E7F82"`;

exports[`should contain correct values for themeDarkStateFocus 1`] = `"#1A44EA"`;

exports[`should contain correct values for themeDarkStateHover 1`] = `"rgba(148, 149, 152, .18)"`;

exports[`should contain correct values for themeLight 1`] = `
{
  "background": {
    "base": "#FFF",
    "shading": "rgba(1, 2, 5, 0.67)",
    "surface": "#EEEFF2",
  },
  "contrast": {
    "high": "#535457",
    "low": "#D8D8DB",
    "medium": "#6B6D70",
  },
  "notification": {
    "error": "#CC1922",
    "errorSoft": "#FFE2E4",
    "info": "#2762EC",
    "infoSoft": "#D3E1FF",
    "success": "#197E10",
    "successSoft": "#E4FFEC",
    "warning": "#F3BE00",
    "warningSoft": "#FFF4D2",
  },
  "primary": "#010205",
  "state": {
    "active": "rgba(148, 149, 152, 0.20)",
    "disabled": "#949598",
    "focus": "#1A44EA",
    "hover": "rgba(148, 149, 152, .18)",
  },
}
`;

exports[`should contain correct values for themeLightBackgroundBase 1`] = `"#FFF"`;

exports[`should contain correct values for themeLightBackgroundShading 1`] = `"rgba(1, 2, 5, 0.67)"`;

exports[`should contain correct values for themeLightBackgroundSurface 1`] = `"#EEEFF2"`;

exports[`should contain correct values for themeLightContrastHigh 1`] = `"#535457"`;

exports[`should contain correct values for themeLightContrastLow 1`] = `"#D8D8DB"`;

exports[`should contain correct values for themeLightContrastMedium 1`] = `"#6B6D70"`;

exports[`should contain correct values for themeLightNotificationError 1`] = `"#CC1922"`;

exports[`should contain correct values for themeLightNotificationErrorSoft 1`] = `"#FFE2E4"`;

exports[`should contain correct values for themeLightNotificationInfo 1`] = `"#2762EC"`;

exports[`should contain correct values for themeLightNotificationInfoSoft 1`] = `"#D3E1FF"`;

exports[`should contain correct values for themeLightNotificationSuccess 1`] = `"#197E10"`;

exports[`should contain correct values for themeLightNotificationSuccessSoft 1`] = `"#E4FFEC"`;

exports[`should contain correct values for themeLightNotificationWarning 1`] = `"#F3BE00"`;

exports[`should contain correct values for themeLightNotificationWarningSoft 1`] = `"#FFF4D2"`;

exports[`should contain correct values for themeLightPrimary 1`] = `"#010205"`;

exports[`should contain correct values for themeLightStateActive 1`] = `"rgba(148, 149, 152, 0.20)"`;

exports[`should contain correct values for themeLightStateDisabled 1`] = `"#949598"`;

exports[`should contain correct values for themeLightStateFocus 1`] = `"#1A44EA"`;

exports[`should contain correct values for themeLightStateHover 1`] = `"rgba(148, 149, 152, .18)"`;
